# discord-qa-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  bot.py  config.yaml  course.yaml  main.py  pyproject.toml  requirements.txt
chibi/: __init__.py  bot.py  config.py  constants.py
chibi/agent/: __init__.py  context_manager.py  graph.py  memory.py  state.py
chibi/cogs/: __init__.py  admin.py  ask.py  attendance.py  chat.py  embed_builder.py  guidance.py  help.py  llm_quiz.py  modules.py  quiz.py  status.py  utils.py
chibi/content/: __init__.py  course.py  loader.py
chibi/database/: __init__.py  connection.py  mappers.py  models.py  repository.py
chibi/learning/: __init__.py  mastery.py  profile.py
chibi/llm/: __init__.py  base.py  manager.py  ollama_provider.py  openrouter_provider.py
chibi/prompts/: __init__.py  templates.py
chibi/services/: __init__.py  ask_service.py  attendance_session.py  base.py  chunking.py  content_indexer.py  contextual_chunking_service.py  embedding_service.py  grade_service.py  guidance_service.py  llm_quiz_service.py  pending_quiz_manager.py  quiz_service.py  rag_service.py  search_agent.py  similarity_service.py  status_service.py
chibi/tools/: __init__.py  base.py  registry.py
chibi/ui/: __init__.py  formatters.py
chibi/utils/: __init__.py  code_generator.py  errors.py
llm_quiz/: dspy_core.py
prompts/: generate_course_yaml.md
scripts/: migrate_questions_to_chromadb.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/mocks/: __init__.py  discord_mocks.py  llm_mocks.py
tests/scenarios/: __init__.py  test_admin_scenarios.py  test_agent_scenarios.py  (+3 more)
(+37 files in other folders)
