[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-qa-agent"
version = "0.1.0"
description = "AI-powered Discord bot for lecture content learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.0.4",
    "chromadb>=0.4.0",
    "ollama>=0.3.0",
    "httpx>=0.27.0",
    "discord>=2.3.2",
    "aiosqlite>=0.21.0",
    "langgraph>=1.0.4",
]

[tool.setuptools.packages.find]
include = ["chibi*"]
exclude = ["tests*", "data*"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
]
dev = [
    "discord-qa-agent[test]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "asyncio: mark test as an async test",
    "slow: mark test as slow (deselect with '-m \"not slow\"')",
    "integration: mark test as integration test",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["chibi"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
